--- a/todolist-goof/k8s/calico.yaml
+++ b/todolist-goof/k8s/calico.yaml
@@ -4063,7 +4063,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: linux
-      hostNetwork: true
+      hostNetwork: false
       tolerations:
         # Make sure calico-node gets scheduled on all nodes.
         - effect: NoSchedule
@@ -4107,6 +4107,7 @@ spec:
               name: cni-bin-dir
           securityContext:
             privileged: true
+            runAsNonRoot: true
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
@@ -4148,6 +4149,7 @@ spec:
               name: cni-net-dir
           securityContext:
             privileged: true
+            runAsNonRoot: true
         # Adds a Flex Volume Driver that creates a per-pod Unix Domain Socket to allow Dikastes
         # to communicate with Felix over the Policy Sync API.
         - name: flexvol-driver
@@ -4157,6 +4159,7 @@ spec:
             mountPath: /host/driver
           securityContext:
             privileged: true
+            runAsNonRoot: true
       containers:
         # Runs calico-node container on each Kubernetes node. This
         # container programs network policy and routes on each
@@ -4234,6 +4237,7 @@ spec:
               value: "true"
           securityContext:
             privileged: true
+            runAsNonRoot: true
           resources:
             requests:
               cpu: 250m
