--- a/todolist-goof/k8s/calico.yaml
+++ b/todolist-goof/k8s/calico.yaml
@@ -4106,8 +4106,12 @@ spec:
             - mountPath: /host/opt/cni/bin
               name: cni-bin-dir
           securityContext:
-            privileged: true
+            privileged: false
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
@@ -4148,8 +4152,12 @@ spec:
             - mountPath: /host/etc/cni/net.d
               name: cni-net-dir
           securityContext:
-            privileged: true
+            privileged: false
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
         # Adds a Flex Volume Driver that creates a per-pod Unix Domain Socket to allow Dikastes
         # to communicate with Felix over the Policy Sync API.
         - name: flexvol-driver
@@ -4158,8 +4166,12 @@ spec:
           - name: flexvol-driver-host
             mountPath: /host/driver
           securityContext:
-            privileged: true
+            privileged: false
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
       containers:
         # Runs calico-node container on each Kubernetes node. This
         # container programs network policy and routes on each
@@ -4236,8 +4248,12 @@ spec:
             - name: FELIX_HEALTHENABLED
               value: "true"
           securityContext:
-            privileged: true
+            privileged: false
             runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
           resources:
             requests:
               cpu: 250m
