--- a/log4shell-goof/log4shell-server/k8s/deploy.yaml
+++ b/log4shell-goof/log4shell-server/k8s/deploy.yaml
@@ -25,6 +25,13 @@ spec:
         - name: ldap
           image: ${DOCKER_ACCOUNT}/log4shell-server:latest
           imagePullPolicy: Always
+        securityContext:
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
 ---
 apiVersion: v1
 kind: Service
