--- a/todolist-goof/k8s/java-goof.yaml
+++ b/todolist-goof/k8s/java-goof.yaml
@@ -21,6 +21,13 @@ spec:
         imagePullPolicy: Always
         name: java-goof
       restartPolicy: Always
+      securityContext:
+        readOnlyRootFilesystem: true
+        allowPrivilegeEscalation: false
+        runAsNonRoot: true
+        capabilities:
+          drop:
+            - ALL
 ---
 apiVersion: v1
 kind: Service
@@ -34,5 +41,7 @@ spec:
     - port: 80
       protocol: TCP
       targetPort: 8080
+  loadBalancerSourceRanges:
+    - 10.0.0.0/8
   selector:
     app: goof
