--- a/todolist-goof/k8s/java-goof3.yaml
+++ b/todolist-goof/k8s/java-goof3.yaml
@@ -22,6 +22,11 @@ spec:
         name: java-goof
         securityContext:
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - ALL
         volumeMounts:
           - mountPath: /usr/local/tomcat/temp
             name: tomcat-temp
@@ -51,5 +56,7 @@ spec:
     - port: 80
       protocol: TCP
       targetPort: 8080
+  loadBalancerSourceRanges:
+    - 10.0.0.0/8
   selector:
     app: goof
