chore: Fix snyk vuln

--- a/todolist-goof/k8s/calico.yaml
+++ b/todolist-goof/k8s/calico.yaml
@@ -4423,6 +4423,13 @@ spec:
               - /usr/bin/check-status
               - -r
             periodSeconds: 10
+          securityContext:
+            privileged: false
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
 
 ---
 
