chore: Fix snyk vuln

--- a/todolist-goof/k8s/java-goof3.yaml
+++ b/todolist-goof/k8s/java-goof3.yaml
@@ -24,6 +24,7 @@ spec:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           runAsNonRoot: true
+          runAsUser: 65534
           capabilities:
             drop:
               - ALL
@@ -42,6 +43,20 @@ spec:
           emptyDir: {}
         - name: tomcat-logs
           emptyDir: {}
+      livenessProbe:
+        exec:
+          command:
+          - cat
+          - /tmp/healthy
+        initialDelaySeconds: 5
+        periodSeconds: 5
+      resources:
+        requests:
+          memory: "64Mi"
+          cpu: "250m"
+        limits:
+          memory: "128Mi"
+          cpu: "500m"
 
 ---
 apiVersion: v1
