--- a/log4shell-goof/log4shell-server/k8s/deploy.yaml
+++ b/log4shell-goof/log4shell-server/k8s/deploy.yaml
@@ -22,16 +22,31 @@ spec:
         app: log4shell
     spec:
       containers:
-      - image: ${DOCKER_ACCOUNT}/log4shell-server:latest
-        imagePullPolicy: Always
-        name: ldap
-        securityContext:
-          runAsNonRoot: true
-          readOnlyRootFilesystem: true
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-              - ALL
+        - image: ${DOCKER_ACCOUNT}/log4shell-server:latest
+          imagePullPolicy: Always
+          name: ldap
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 65534
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+          livenessProbe:
+          exec:
+            command:
+              - cat
+              - /tmp/healthy
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
@@ -58,4 +73,3 @@ spec:
     - protocol: TCP
       port: 9999
       targetPort: 9999
-
