--- a/todolist-goof/k8s/java-goof.yaml
+++ b/todolist-goof/k8s/java-goof.yaml
@@ -17,17 +17,33 @@ spec:
         app: goof
     spec:
       containers:
-      - image: ${DOCKER_ACCOUNT}/java-goof:latest
-        imagePullPolicy: Always
-        name: java-goof
-        securityContext:
-          readOnlyRootFilesystem: true
-          allowPrivilegeEscalation: false
-          runAsNonRoot: true
-          capabilities:
-            drop:
-              - ALL
+        - image: ${DOCKER_ACCOUNT}/java-goof:latest
+          imagePullPolicy: Always
+          name: java-goof
+          securityContext:
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 65534
+            capabilities:
+              drop:
+                - ALL
+              livenessProbe:
+            exec:
+              command:
+                - cat
+                - /tmp/healthy
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
       restartPolicy: Always
+
 ---
 apiVersion: v1
 kind: Service
